@@ -11,6 +11,7 @@ SVN
 - Added check next to currently selected key in key pop-up menu
 - Somewhat better handling of out-of-range notes in keyboard editor
 - Fixed crashes and heap corruption in score editor
+- Fixed weird behaviour when pressing space and nothing is selected
 
 1.1.1
 - Added feature to see other tracks in background of current track (keyboard view only for now)
